@@ -76,6 +76,7 @@ import android.net.wifi.WifiNetworkSuggestion;
 import android.net.wifi.WifiScanner;
 import android.net.wifi.WifiSsid;
 import android.net.wifi.util.ScanResultUtil;
+import android.net.wifi.util.WifiResourceCache;
 import android.os.Binder;
 import android.os.Build;
 import android.os.Bundle;
@@ -184,6 +185,7 @@ public class WifiShellCommand extends BasicShellCommandHandler {
             "set-mock-wifimodem-methods",
             "force-overlay-config-value",
             "get-softap-supported-features",
+            "get-overlay-config-values"
     };
 
     private static final Map<String, Pair<NetworkRequest, ConnectivityManager.NetworkCallback>>
@@ -215,6 +217,7 @@ public class WifiShellCommand extends BasicShellCommandHandler {
     private final WifiDiagnostics mWifiDiagnostics;
     private final DeviceConfigFacade mDeviceConfig;
     private final AfcManager mAfcManager;
+    private final WifiInjector mWifiInjector;
     private static final int[] OP_MODE_LIST = {
             WifiAvailableChannel.OP_MODE_STA,
             WifiAvailableChannel.OP_MODE_SAP,
@@ -439,6 +442,7 @@ public class WifiShellCommand extends BasicShellCommandHandler {
 
     WifiShellCommand(WifiInjector wifiInjector, WifiServiceImpl wifiService, WifiContext context,
             WifiGlobals wifiGlobals, WifiThreadRunner wifiThreadRunner) {
+        mWifiInjector = wifiInjector;
         mWifiGlobals = wifiGlobals;
         mWifiThreadRunner = wifiThreadRunner;
         mActiveModeWarden = wifiInjector.getActiveModeWarden();
@@ -513,28 +517,70 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                             + mWifiGlobals.getIpReachabilityDisconnectEnabled());
                     return 0;
                 case "set-poll-rssi-interval-msecs":
-                    int newPollIntervalMsecs;
-                    try {
-                        newPollIntervalMsecs = Integer.parseInt(getNextArgRequired());
-                    } catch (NumberFormatException e) {
-                        pw.println(
+                    List<Integer> newPollIntervals = new ArrayList<>();
+                    while (getRemainingArgsCount() > 0) {
+                        int newPollIntervalMsecs;
+                        try {
+                            newPollIntervalMsecs = Integer.parseInt(getNextArgRequired());
+                        } catch (NumberFormatException e) {
+                            pw.println(
                                 "Invalid argument to 'set-poll-rssi-interval-msecs' "
-                                        + "- must be a positive integer");
-                        return -1;
+                                    + "- must be a positive integer");
+                            return -1;
+                        }
+
+                        if (newPollIntervalMsecs < 1) {
+                            pw.println(
+                                "Invalid argument to 'set-poll-rssi-interval-msecs' "
+                                    + "- must be a positive integer");
+                            return -1;
+                        }
+
+                        newPollIntervals.add(newPollIntervalMsecs);
                     }
 
-                    if (newPollIntervalMsecs < 1) {
-                        pw.println(
-                                "Invalid argument to 'set-poll-rssi-interval-msecs' "
-                                        + "- must be a positive integer");
-                        return -1;
+                    switch (newPollIntervals.size()) {
+                        case 0:
+                            throw new IllegalArgumentException(
+                                "Need at least one valid rssi polling interval");
+                        case 1:
+                            mActiveModeWarden.getPrimaryClientModeManager()
+                                    .setLinkLayerStatsPollingInterval(newPollIntervals.get(0));
+                            break;
+                        case 2:
+                            int newShortIntervalMsecs = newPollIntervals.get(0);
+                            int newLongIntervalMsecs = newPollIntervals.get(1);
+                            if (newShortIntervalMsecs >= newLongIntervalMsecs) {
+                                pw.println(
+                                        "Invalid argument to 'set-poll-rssi-interval-msecs' "
+                                                + "- the long polling interval must be greater "
+                                                + "than the short polling interval");
+                                return -1;
+                            }
+                            mWifiGlobals.setPollRssiShortIntervalMillis(newShortIntervalMsecs);
+                            mWifiGlobals.setPollRssiLongIntervalMillis(newLongIntervalMsecs);
+                            mWifiGlobals.setPollRssiIntervalMillis(newShortIntervalMsecs);
+                            mActiveModeWarden.getPrimaryClientModeManager()
+                                    .setLinkLayerStatsPollingInterval(0);
+                            break;
+                        default:
+                            pw.println("Too many arguments, need at most two valid rssi polling "
+                                    + "intervals");
+                            return -1;
                     }
-
-                    mWifiGlobals.setPollRssiIntervalMillis(newPollIntervalMsecs);
                     return 0;
                 case "get-poll-rssi-interval-msecs":
-                    pw.println("WifiGlobals.getPollRssiIntervalMillis() = "
+                    pw.println("Current interval between RSSI polls (milliseconds) = "
                             + mWifiGlobals.getPollRssiIntervalMillis());
+                    if (mWifiGlobals.isAdjustPollRssiIntervalEnabled()
+                            && mDeviceConfig.isAdjustPollRssiIntervalEnabled()
+                            && !mWifiGlobals.isPollRssiIntervalOverridden()) {
+                        pw.println("Auto adjustment of poll rssi is enabled");
+                        pw.println("Regular (short) interval between RSSI polls (milliseconds) = "
+                                + mWifiGlobals.getPollRssiShortIntervalMillis());
+                        pw.println("Long interval between RSSI polls (milliseconds) = "
+                                + mWifiGlobals.getPollRssiLongIntervalMillis());
+                    }
                     return 0;
                 case "force-hi-perf-mode": {
                     boolean enabled = getNextArgRequiredTrueOrFalse("enabled", "disabled");
@@ -553,8 +599,10 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                 case "network-suggestions-set-user-approved": {
                     String packageName = getNextArgRequired();
                     boolean approved = getNextArgRequiredTrueOrFalse("yes", "no");
-                    mWifiNetworkSuggestionsManager.setHasUserApprovedForApp(approved,
-                            Binder.getCallingUid(), packageName);
+                    mWifiThreadRunner.post(() -> mWifiNetworkSuggestionsManager
+                            .setHasUserApprovedForApp(approved,
+                                    Binder.getCallingUid(), packageName),
+                            "shell#setHasUserApprovedForApp");
                     return 0;
                 }
                 case "network-suggestions-has-user-approved": {
@@ -1117,7 +1165,7 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                         return -1;
                     }
                     int errorCode = mWifiService.addNetworkSuggestions(
-                            Arrays.asList(suggestion), SHELL_PACKAGE_NAME, null);
+                            new ParceledListSlice(List.of(suggestion)), SHELL_PACKAGE_NAME, null);
                     if (errorCode != WifiManager.STATUS_NETWORK_SUGGESTIONS_SUCCESS) {
                         pw.println("Add network suggestion failed with error code: " + errorCode);
                         return -1;
@@ -1158,7 +1206,7 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                         actionCode = ACTION_REMOVE_SUGGESTION_LINGER;
                     }
                     List<WifiNetworkSuggestion> suggestions =
-                            mWifiService.getNetworkSuggestions(SHELL_PACKAGE_NAME);
+                            mWifiService.getNetworkSuggestions(SHELL_PACKAGE_NAME).getList();
                     WifiNetworkSuggestion suggestion = suggestions.stream()
                             .filter(s -> s.getSsid().equals(ssid))
                             .findAny()
@@ -1168,7 +1216,8 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                         return -1;
                     }
                     mWifiService.removeNetworkSuggestions(
-                            Arrays.asList(suggestion), SHELL_PACKAGE_NAME, actionCode);
+                            new ParceledListSlice<>(List.of(suggestion)),
+                            SHELL_PACKAGE_NAME, actionCode);
                     // untrusted/oem-paid networks need a corresponding NetworkRequest.
                     if (suggestion.isUntrusted()
                             || (SdkLevel.isAtLeastS()
@@ -1186,12 +1235,12 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                 }
                 case "remove-all-suggestions":
                     mWifiService.removeNetworkSuggestions(
-                            Collections.emptyList(), SHELL_PACKAGE_NAME,
+                            new ParceledListSlice<>(Collections.emptyList()), SHELL_PACKAGE_NAME,
                             WifiManager.ACTION_REMOVE_SUGGESTION_DISCONNECT);
                     return 0;
                 case "list-suggestions": {
                     List<WifiNetworkSuggestion> suggestions =
-                            mWifiService.getNetworkSuggestions(SHELL_PACKAGE_NAME);
+                            mWifiService.getNetworkSuggestions(SHELL_PACKAGE_NAME).getList();
                     printWifiNetworkSuggestions(pw, suggestions);
                     return 0;
                 }
@@ -1204,7 +1253,7 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                 case "list-suggestions-from-app": {
                     String packageName = getNextArgRequired();
                     List<WifiNetworkSuggestion> suggestions =
-                            mWifiService.getNetworkSuggestions(packageName);
+                            mWifiService.getNetworkSuggestions(packageName).getList();
                     printWifiNetworkSuggestions(pw, suggestions);
                     return 0;
                 }
@@ -1220,7 +1269,10 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                     ConnectivityManager.NetworkCallback networkCallback =
                             new ConnectivityManager.NetworkCallback();
                     pw.println("Adding request: " + networkRequest);
-                    mConnectivityManager.requestNetwork(networkRequest, networkCallback);
+                    mWifiThreadRunner.post(() -> mConnectivityManager
+                                    .requestNetwork(networkRequest, networkCallback),
+                            "shell#add-request");
+
                     sActiveRequests.put(ssid, Pair.create(networkRequest, networkCallback));
                     return 0;
                 }
@@ -1233,7 +1285,9 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                         return -1;
                     }
                     pw.println("Removing request: " + nrAndNc.first);
-                    mConnectivityManager.unregisterNetworkCallback(nrAndNc.second);
+                    mWifiThreadRunner.post(() -> mConnectivityManager
+                                    .unregisterNetworkCallback(nrAndNc.second),
+                            "shell#remove-request");
                     return 0;
                 }
                 case "remove-all-requests":
@@ -1244,7 +1298,9 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                     for (Pair<NetworkRequest, ConnectivityManager.NetworkCallback> nrAndNc
                             : sActiveRequests.values()) {
                         pw.println("Removing request: " + nrAndNc.first);
-                        mConnectivityManager.unregisterNetworkCallback(nrAndNc.second);
+                        mWifiThreadRunner.post(() ->
+                                mConnectivityManager.unregisterNetworkCallback(nrAndNc.second),
+                                "shell#remove-request");
                     }
                     sActiveRequests.clear();
                     return 0;
@@ -2151,15 +2207,45 @@ public class WifiShellCommand extends BasicShellCommandHandler {
                     }
                     return 0;
                 case "force-overlay-config-value":
-                    String configValue = getNextArgRequired();
-                    String overlayName = getNextArgRequired();
-                    boolean isEnabled = getNextArgRequiredTrueOrFalse("enabled", "disabled");
-                    if (mWifiService.forceOverlayConfigValue(overlayName, configValue, isEnabled)) {
-                        pw.print("true");
-                    } else {
-                        pw.print("fail to force overlay : " + overlayName);
+                    int uid = Binder.getCallingUid();
+                    if (!mWifiInjector.getWifiPermissionsUtil()
+                            .checkNetworkSettingsPermission(Binder.getCallingUid())) {
+                        pw.println("current shell caller Uid " + uid
+                                + " Missing NETWORK_SETTINGS permission");
                         return -1;
                     }
+                    WifiResourceCache resourceCache = mContext.getResourceCache();
+                    String type = getNextArgRequired();
+                    String overlayName = getNextArgRequired();
+                    boolean isEnabled = getNextArgRequiredTrueOrFalse("enabled", "disabled");
+                    switch (type) {
+                        case "bool" -> {
+                            boolean value = false;
+                            if (isEnabled) {
+                                value = getNextArgRequiredTrueOrFalse("true", "false");
+                                resourceCache.overrideBooleanValue(overlayName, value);
+                            } else {
+                                resourceCache.restoreBooleanValue(overlayName);
+                            }
+                        }
+                        case "integer" -> {
+                            int value = 0;
+                            if (isEnabled) {
+                                value = Integer.parseInt(getNextArgRequired());
+                                resourceCache.overrideIntegerValue(overlayName, value);
+                            } else {
+                                resourceCache.restoreIntegerValue(overlayName);
+                            }
+                        }
+                        default -> {
+                            pw.print("require a valid type of the overlay");
+                            return -1;
+                        }
+                    }
+                    pw.println("true");
+                    return 0;
+                case "get-overlay-config-values":
+                    mContext.getResourceCache().dump(pw);
                     return 0;
                 default:
                     return handleDefaultCommands(cmd);
@@ -2956,18 +3042,17 @@ public class WifiShellCommand extends BasicShellCommandHandler {
         pw.println("       '31' - band 2.4, 5, 6 and 60 GHz with DFS channels");
         pw.println("  get-cached-scan-data");
         pw.println("    Gets scan data cached by the firmware");
-        pw.println("  force-overlay-config-value <configValue> <overlayName> enabled|disabled");
-        pw.println("    Force overlay to a specified value. See below for supported overlays.");
-        pw.println("    <configValue> - override value of the overlay. See above for accepted "
-                + "values per overlay.");
+        pw.println("  force-overlay-config-value bool|integer <overlayName> enabled|disabled"
+                + "<configValue>");
+        pw.println("    Force overlay to a specified value.");
+        pw.println("    bool|integer   - specified the type of the overlay");
         pw.println("    <overlayName> - name of the overlay whose value is overridden.");
-        pw.println("        - Currently supports:");
-        pw.println("          <configValue> = true|false for <overlayName> = "
-                + "'config_wifi_background_scan_support'");
-        pw.println("          <configValue> = true|false for <overlayName> = "
-                + "'config_wifiWepDeprecated'");
-        pw.println("    <enabled|disabled>: enable the override or disable it and revert to using "
+        pw.println("    enabled|disabled: enable the override or disable it and revert to using "
                 + "the built-in value.");
+        pw.println("    <configValue> - override value of the overlay."
+                + "Must match the overlay type");
+        pw.println("  get-overlay-config-values");
+        pw.println("    Get current overlay value in resource cache.");
         pw.println("  get-softap-supported-features");
         pw.println("    Gets softap supported features. Will print 'wifi_softap_acs_supported'");
         pw.println("    and/or 'wifi_softap_wpa3_sae_supported',");
@@ -2977,8 +3062,15 @@ public class WifiShellCommand extends BasicShellCommandHandler {
     }
 
     private void onHelpPrivileged(PrintWriter pw) {
-        pw.println("  set-poll-rssi-interval-msecs <int>");
-        pw.println("    Sets the interval between RSSI polls to <int> milliseconds.");
+        pw.println("  set-poll-rssi-interval-msecs <int> [<int>]");
+        pw.println("    Sets the interval between RSSI polls to the specified value(s), in "
+                + "milliseconds.");
+        pw.println("    When only one value is specified, set the interval to that value. "
+                + "When two values are specified, set the regular (short) interval to the first "
+                + "value, and set the long interval to the second value. Note that the "
+                + "enabling/disabling of auto adjustment between the two intervals is handled by "
+                + "the respective flags. If the auto adjustment is disabled, it is equivalent to "
+                + "only specifying the first value, and then setting the interval to that value");
         pw.println("  get-poll-rssi-interval-msecs");
         pw.println("    Gets current interval between RSSI polls, in milliseconds.");
         pw.println("  force-hi-perf-mode enabled|disabled");
